--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,82 @@ pyyaml_env_tag==0.1
 six==1.16.0
 watchdog==3.0.0
 zipp==3.17.0
+asttokens==2.4.1
+attrs==23.2.0
+Babel==2.14.0
+beautifulsoup4==4.12.2
+bleach==6.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+comm==0.2.0
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+exceptiongroup==1.2.0
+executing==2.0.1
+fastjsonschema==2.19.1
+ghp-import==2.1.0
+idna==3.6
+importlib-metadata==7.0.1
+ipykernel==6.28.0
+ipython==8.18.1
+jedi==0.19.1
+Jinja2==3.1.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.0
+jupyter_core==5.6.1
+jupyterlab_pygments==0.3.0
+jupytext==1.16.0
+Markdown==3.5.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
+mergedeep==1.3.4
+mistune==3.0.2
+mkdocs==1.5.3
+mkdocs-jupyter==0.24.6
+mkdocs-material==9.5.3
+mkdocs-material-extensions==1.3.1
+nbclient==0.9.0
+nbconvert==7.14.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
+packaging==23.2
+paginate==0.5.6
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.12.1
+pexpect==4.9.0
+platformdirs==4.1.0
+prompt-toolkit==3.0.43
+psutil==5.9.7
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
+pymdown-extensions==10.7
+python-dateutil==2.8.2
+PyYAML==6.0.1
+pyyaml_env_tag==0.1
+pyzmq==25.1.2
+referencing==0.32.0
+regex==2023.12.25
+requests==2.31.0
+rpds-py==0.16.2
+six==1.16.0
+soupsieve==2.5
+stack-data==0.6.3
+tinycss2==1.2.1
+toml==0.10.2
+tornado==6.4
+traitlets==5.14.0
+typing_extensions==4.9.0
+urllib3==2.1.0
+watchdog==3.0.0
+wcwidth==0.2.12
+webencodings==0.5.1
+zipp==3.17.0
