--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,12 @@
-site_name: My Docs
+site_name: ""
+site_url: 
+
+theme:
+    name: united  
+    palette:
+        scheme: slate
+    nav_style: dark
+    
+plugins:
+  - mkdocs-jupyter
+
