--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           key: ${{ github.ref }}
           path: .cache
       - run: pip install mkdocs-material
-      - run: pip install jupyter
+      - run: pip install ipython_genutils
       - run: pip install pillow cairosvg
       - run: pip install mkdocs-glightbox
       - run: pip install mkdocs-jupyter==0.16.1
